# Records_Information

./: LICENSE  README.MD
patient-records-information/: package-lock.json  package.json
patient-records-information/src-tauri/: .env.example  .gitignore  Cargo.toml  DOCUMENTATION.MD  MIGRATIONS.md  SERVER_SETUP.md  patient_records.db  tauri.conf.json
patient-records-information/src-tauri/examples/: server_usage.rs
patient-records-information/src-tauri/src/: lib.rs  main.rs  server.rs
patient-records-information/src-tauri/src/database/: connection.rs
patient-records-information/src-tauri/src/handlers/: medical_services_handler.rs  mod.rs  patient_handlers.rs
patient-records-information/src-tauri/src/migrations/: cli.rs  m20240101_000001_create_patients_table.rs  m20240101_000002_create_medical_records_table.rs  mod.rs  runner.rs  template.rs
patient-records-information/src-tauri/src/models/: accounts.rs  medical_bill_record.rs  medical_record_tb.rs  medical_services.rs  medical_services_provided.rs  mod.rs  patient_tb.rs
patient-records-information/src-tauri/src/server/: config.rs  handlers.rs  middleware.rs  mod.rs  state.rs
patient-records-information/src-tauri/src/tests/: mod.rs  patient_service_test.rs
