[package]
name = "patient-records-information"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "patient_records_information_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Core Tauri
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Actix Web (web framework, runs on Tokio)
actix-web = "4"

# SeaORM (ORM for Postgres + SQLite, using Tokio + native-tls)
sea-orm = { version = "1.1.15", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-native-tls"] }

# SQLx (database drivers, same runtime as SeaORM)
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "sqlite"] }

# Chrono for date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Tokio async runtime (needed for Actix + SeaORM + SQLx)
tokio = { version = "1", features = ["full"] }

# Async traits
async-trait = "0.1"

